--- a/movie_booking_frontend/package.json
+++ b/movie_booking_frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.28.0",
     "swiper": "^11.1.14"
   },
