--- a/movie_booking_frontend/package.json
+++ b/movie_booking_frontend/package.json
@@ -19,7 +19,10 @@
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.28.0",
-    "swiper": "^11.1.14"
+    "react-simple-typewriter": "^5.0.1",
+    "react-typical": "^0.1.3",
+    "swiper": "^11.1.14",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
