--- a/movie_booking_frontend/package.json
+++ b/movie_booking_frontend/package.json
@@ -13,7 +13,10 @@
     "axios": "^1.7.7",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.11.11",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
